--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "knplabs/github-api": "*"
+        "knplabs/github-api": "*",
+        "symfony/finder": "*"
     },
     "minimum-stability": "dev"
 }
